@@ -1,1 +1,1 @@
-__version__ = '1.0rc1'
+__version__ = '1.0rc2'
